# ADK-Chat-Web

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  config.py  models.py  security.py  tools.py
app/agents/: __init__.py
app/agents/root_agent/: agent.py  prompts.py
data/: city_code.json
web/: .env.example  .gitignore  .prettierignore  README.md  index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css  main.tsx
web/src/api/: index.ts
web/src/components/chat/: ChatArea.tsx  NoSession.tsx
web/src/components/chat/ChatArea/: ChatArea.module.css  ChatArea.tsx
web/src/components/chat/Welcome/: Welcome.module.css  Welcome.tsx  index.tsx
web/src/components/layout/: AppBar.tsx  AppLayout.tsx  SessionLayout.tsx
web/src/components/session/: SessionList.tsx
web/src/components/session/SessionList/: SessionList.module.css  SessionList.tsx
web/src/components/theme/: ThemeDemo.module.css  ThemeDemo.tsx
web/src/contexts/: ChatContext.tsx
web/src/hooks/: useAppManager.ts  useApps.ts  useMessages.ts  useSessions.ts
web/src/styles/: chat.module.css  global.module.css
web/src/types/: event.ts  index.ts  llm.ts  request.ts  session.ts
web/src/utils/: messageUtils.ts
